# mt-ifeval-ko

./: .env_example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_eval.sh  tmp  upload_dataset.sh
data/: multiIF_20241018_English.jsonl
gradio/: app.py  requirements.txt
ifeval/: __init__.py  evaluation_lib.py  evaluation_main.py  instructions_registry.py
ifeval/instruction_utils/: ko_instructions_util.py
ifeval/instructions/: en_instructions.py  ko_instructions.py
scripts/: analize_results.py  ifeval_langchain_with_langfuse.py  ifeval_langgraph_with_langfuse.py  langfuse_dataset_upload.py
